--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,40 @@
-.content{
-    
-    display: table; 
-    margin:auto;   
-}
-.main {
-    display: table-cell;
-    width: 800px;
-    align-content: center;
-    border-left: 2px solid #f0f0f0;
-    border-right: 2px solid #f0f0f0;
-    background-color: white;
-    padding-left: 64px;
-    padding-right: 64px;
-}
-
-.structure {
-    float:left;
-    position:fixed;
-    overflow: scroll;
-}
-
-h1, h2, h3, h4, h5, h6{
+.markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6{
+    color: black;
     margin: 24px 0 16px;
 }
 
-h1 {
+.markdown-body h1 {
     font-weight: 900;
     font-size: 1.6em;
     border-bottom: 1px solid rgba(0, 0, 0, 0.8);
     padding-bottom: 0.3em;
 }
 
-h2 {
+.markdown-body h2 {
     font-weight: 800;
     font-size: 1.4em;
    border-bottom: 1px solid rgba(0, 0, 0, 0.36);   
    padding-bottom: 0.2em;
 }
 
-h3 {
+.markdown-body h3 {
     font-weight: 600;
     font-size: 1.3em;
    border-bottom: 1px solid rgba(0, 0, 0, 0.18);
    padding-bottom: 0.1em; 
 }
 
-h4 {
+.markdown-body h4 {
     font-weight: 600;
     font-size: 1.2em;    
 }
 
-h5 {
+.markdown-body h5 {
    font-weight: 600;
     font-size: 1.2em;    
 }
 
-h6 {
+.markdown-body h6 {
     font-weight: 600;
     font-size: 1.2em;    
 }
@@ -80,7 +59,7 @@ h6 {
    margin-top: 16px;
 }
 
-.markdown-body img {    
+.markdown-body :not(td)>img {    
     margin-left:24px;
     margin-right:16px;
 }
