--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,15 @@
     padding: 0px;
 }
 
+.markdown-body code {
+        color: #004d9c;
+}
+
+.hljs-string,
+.hljs-doctag {
+  color: #a62e00;
+}
+
 .markdown-body pre code > div {
    
     padding-left: 8px;
@@ -94,4 +103,9 @@ nav[data-toggle='toc'] {
 .content {
   
     background-color: white; 
+}
+
+@media print {
+   #structure { display:none; }
+   #printarea { display:block; }
 }
